--- a/package.json
+++ b/package.json
@@ -4,17 +4,22 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "axios": "0.27.2",
+    "bootstrap": "4.6.0",
+    "moment": "^2.29.4",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-redux": "7.2.3",
+    "react-router-dom": "5.2.0",
+    "react-scripts": "4.0.0",
+    "react-toastify": "7.0.3",
+    "redux": "4.0.5",
+    "redux-devtools-extension": "2.13.9"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
